# rust-vs-hs

./: README.md  test.sh
hs/: .gitignore  lang.hs
rs/: Cargo.toml  lang.rs
rs/src/: lib.rs  main.rs  main_b.rs
ts/: .gitignore  index.mts  package.json  tsconfig.json
